# src/apps/conteos_stock/api/schemas/localSinConteoSchema.ts
@@ -5,7 +5,7 @@
  * OpenAPI spec version: 1.0.0
  */
 
-export type ConteostockApiListaComprasLocalParams = {
-local_id: number;
-fecha: string;
-};
+export interface LocalSinConteoSchema {
+  local_id: number;
+  local_nombre: string;
+}
